--- a/zhiqizhou.css
+++ b/zhiqizhou.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: rgb(244, 247, 238);
 }
 
 .top-bar {
@@ -17,16 +17,16 @@ body {
 }
 
 .logo {
-   font-size: 30px;
+   font-size: 40px;
    position: absolute;
    padding: 0px 0px 0px 20px;
    z-index: 3;
-   color: #131359;
+   color: #bf12c8;
    font-weight: bold;
 }
 
 .top-menu {
-   background-color: #131359;
+   background-color: #8ed2f4;
    position: absolute;
    top: 85px;
    z-index: 2;
@@ -55,7 +55,7 @@ body {
 }
 
 .current-page-link {
-    background-color: #db0e0e;
+    background-color: #30db0e;
 }
 
 .page-content {
@@ -64,7 +64,7 @@ body {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
+    background-color: rgb(242, 160, 216);
     z-index: 1;
 }
 
@@ -101,3 +101,24 @@ body {
     color: white;
     text-decoration: none;
 }
+
+
+.h1 {
+    text-shadow: 50px 50px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+.h2 {
+    background-color: lightgoldenrodyellow;
+    font-family: Georgia;
+  }
+
+.ol {
+    list-style-type: upper-roman;
+    border-style: solid;
+    border-color: red;
+  }
+.p {
+    color:#3f3c3c;
+    font-family: Arial, Helvetica, sans-serif;
+  }
