--- a/zhiqizhou.css
+++ b/zhiqizhou.css
@@ -103,12 +103,12 @@ body {
 }
 
 
-.h1 {
+h1 {
     text-shadow: 50px 50px;
     font-family: Arial, Helvetica, sans-serif;
   }
 
-.h2 {
+h2 {
     background-color: lightgoldenrodyellow;
     font-family: Georgia;
   }
